# clean_TIL

./: README.md  config.py  containers.py  database.py  main.py  middlewares.py  pyproject.toml
common/: auth.py  logger.py  messaging.py
init/: user_init.py
migrations/: env.py
migrations/versions/: 2024_11_05_1819-9a5a9112e100_add_user_table.py  2024_11_07_1111-b3c5ae7b083a_user_add_memo.py  2024_11_07_1405-ee933fc57e08_user_modify_memo.py  2024_11_07_1710-eea1959febea_add_note_tag.py
user/application/: email_service.py  send_welcome_email_task.py  user_service.py
user/infra/repository/: user_repo.py
user/interface/controllers/: user_controller.py
utils/: db_utils.py
